...
    android:padding="14dp"
    android:layout_marginStart="4dp"
    android:layout_marginEnd="4dp"
    android:layout_marginBottom="8dp"
    android:minHeight="132dp">
    <TextView
        android:id="@+id/fileName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:ellipsize="end"
        android:textColor="?attr/colorOnSurface"
        app:layout_constraintBottom_toBottomOf="parent"
...
        android:textAppearance="@style/TextAppearance.Giant.Subtitle"
        android:textSize="15sp"
        android:maxLines="2"
        android:layout_marginTop="12dp"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fileIcon" />

    <ImageView
        android:id="@+id/fileIcon"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@drawable/giant_icon_background"
...
