...

        <include
            android:id="@+id/path_man_layout"
            layout="@layout/layout_path"
            android:layout_width="0dp"
            android:layout_height="50dp"
            app:layout_constraintEnd_toStartOf="@id/switchDisplay"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar_container" />

        <ImageButton
            android:id="@+id/switchDisplay"
            android:layout_width="40dp"
...
            android:src="@drawable/icon_display_type"
            app:layout_constraintBottom_toBottomOf="@id/path_man_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/path_man_layout" />

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/nav_host_fragment_main"
            android:name="androidx.navigation.fragment.NavHostFragment"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="50dp"
            app:defaultNavHost="true"
            app:layout_constraintBottom_toBottomOf="parent"
...
