<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/delete"
        android:title="@string/delete" />
    <item
        android:id="@+id/move_to"
        android:title="@string/move_to" />
    <item
        android:id="@+id/copy_to"
        android:title="@string/copy_to" />
    <item
        android:id="@+id/copy_file"
        android:title="@string/copy_files" />
    <item
        android:id="@+id/properties"
        android:title="@string/properties" />
    <item
        android:id="@+id/preview_archive"
        android:title="@string/preview_archive"/>
</menu>